--- a/src/main/resources/templates/loja.html
+++ b/src/main/resources/templates/loja.html
@@ -29,7 +29,7 @@
 
         /* BANNER */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('banner.png'), var(--cor-principal);
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../static/banner.png'), var(--cor-principal);
             background-size: cover; background-position: center; height: 350px;
             display: flex; align-items: center; justify-content: center; text-align: center; color: white;
         }
